fix: force outline to not be visible

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5186,6 +5186,11 @@ video {
   outline-offset: 2px;
 }
 
+.\!outline-none {
+  outline: 2px solid transparent !important;
+  outline-offset: 2px !important;
+}
+
 .outline {
   outline-style: solid;
 }
@@ -7609,6 +7614,10 @@ bs-daterangepicker-container {
   border-style: none;
 }
 
+.focus\:\!border-none:focus {
+  border-style: none !important;
+}
+
 .focus\:border-error-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(var(--color-error-500) / var(--tw-border-opacity, 1));
@@ -7635,6 +7644,11 @@ bs-daterangepicker-container {
   outline-offset: 2px;
 }
 
+.focus\:\!outline-none:focus {
+  outline: 2px solid transparent !important;
+  outline-offset: 2px !important;
+}
+
 .focus\:outline-0:focus {
   outline-width: 0px;
 }
@@ -7649,6 +7663,12 @@ bs-daterangepicker-container {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:\!ring-0:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
 }
 
 .focus\:ring-blue-500:focus {
